# fast-osm-raster-render

./: CLAUDE.md  Cargo.toml  MAPLIBRE_NOTES.md  README.md  build.rs  claude.md  stop-server.sh
examples/: render_tile.rs  test_load_osm.rs  test_node_locations.rs  test_osm_coords.rs  test_osm_read.rs  test_shader_math.rs
python_tests/: README.md  conftest.py  pyproject.toml  requirements.txt  test_regression.py  test_unit.py
python_tests/scripts/: update_golden_images.py
python_tests/test_data/: generator.py
python_tests/test_data/fixtures/: boundary_cross.osm.pbf  cross_pattern.osm.pbf  diagonal_line.osm.pbf  empty_tile.osm.pbf  grid_pattern.osm.pbf  horizontal_line.osm.pbf  single_point.osm.pbf  vertical_line.osm.pbf
python_tests/utils/: image_comparison.py  osm_builder.py  renderer.py
shaders/: tile.frag  tile.vert  tile.vert.spv  tile_debug.vert  tile_debug.vert.spv  tile_simple.vert  tile_simple.vert.spv
src/: lib.rs  main.rs  projection.rs
src/data/: loader.rs  mmap.rs  mod.rs  serialization.rs  spatial.rs  types.rs
src/encoding/: png.rs
src/renderer/: command.rs  memory.rs  mod.rs  pipeline.rs  renderer.rs  vulkan.rs
src/server/: handlers.rs  mod.rs
static/: index.html
tests/: renderer_test.rs
